[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprite/stuff.png" type="Texture" id=1]
[ext_resource path="res://script/ui.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 48, 22, 16, 3 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 65, 23, 28, 1 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 4 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 20, 16, 4 )

[node name="ui" type="CanvasLayer"]
pause_mode = 2
scale = Vector2( 4, 4 )
transform = Transform2D( 4, 0, 0, 4, 0, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 609.0 ]
}

[node name="margin" type="Control" parent="."]
pause_mode = 1
anchor_left = 0.5
anchor_right = 0.5
margin_left = -476.0
margin_right = 476.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox_left" type="HBoxContainer" parent="margin"]
margin_right = 148.0
margin_bottom = 16.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo" type="Sprite" parent="margin/hbox_left"]
position = Vector2( 128, 0 )
texture = ExtResource( 1 )
centered = false
vframes = 16
hframes = 16
frame = 18

[node name="ammo_progress" type="TextureProgress" parent="margin/hbox_left/ammo"]
margin_left = -15.0
margin_top = 6.0
margin_right = 1.0
margin_bottom = 10.0
max_value = 4.0
value = 4.0
texture_progress = SubResource( 1 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="margin"]
margin_left = 114.0
margin_top = 13.75
margin_right = 142.0
margin_bottom = 15.75
size_flags_horizontal = 5
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shooting" type="TextureProgress" parent="margin/vbox"]
margin_right = 28.0
margin_bottom = 2.0
size_flags_horizontal = 5
size_flags_vertical = 3
max_value = 16.0
value = 16.0
texture_progress = SubResource( 2 )

[node name="hbox_right" type="HBoxContainer" parent="margin"]
margin_left = 148.0
margin_right = 232.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Sprite" parent="margin/hbox_right"]
texture = ExtResource( 1 )
centered = false
vframes = 16
hframes = 16
frame = 17

[node name="health_progress" type="TextureProgress" parent="margin/hbox_right/health"]
margin_left = 16.0
margin_top = 6.0
margin_right = 32.0
margin_bottom = 10.0
max_value = 5.0
value = 5.0
texture_under = SubResource( 3 )
texture_progress = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blank" type="Control" parent="margin/hbox_right"]
margin_bottom = 16.0

[node name="esc" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="esc"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.533333 )

[node name="tween" type="Tween" parent="."]
pause_mode = 1
